error.txt
 Compiling better-auth-toasty v0.1.0 (/home/benluo/dev/github/better-auth-toasty)
error[E0432]: unresolved import `crate::error`
  --> src/lib.rs:13:12
   |
13 | use crate::error::AuthError;
   |            ^^^^^ unresolved import
   |
help: a similar path exists
   |
13 | use crate::core::error::AuthError;
   |            ++++++

error[E0432]: unresolved import `crate::models`
  --> src/lib.rs:14:12
   |
14 | use crate::models::{Account, Session, User, Verification};
   |            ^^^^^^ could not find `models` in the crate root

error[E0432]: unresolved import `crate::types`
  --> src/lib.rs:17:12
   |
17 | use crate::types::{
   |            ^^^^^ could not find `types` in the crate root

error[E0405]: cannot find trait `UserOps` in this scope
  --> src/lib.rs:35:6
   |
35 | impl UserOps for ToastyAdapter {
   |      ^^^^^^^ not found in this scope

error[E0405]: cannot find trait `SessionOps` in this scope
  --> src/lib.rs:77:6
   |
77 | impl SessionOps for ToastyAdapter {
   |      ^^^^^^^^^^ not found in this scope

error[E0405]: cannot find trait `AccountOps` in this scope
   --> src/lib.rs:120:6
    |
120 | impl AccountOps for ToastyAdapter {
    |      ^^^^^^^^^^ not found in this scope

error[E0405]: cannot find trait `VerificationOps` in this scope
   --> src/lib.rs:152:6
    |
152 | impl VerificationOps for ToastyAdapter {
    |      ^^^^^^^^^^^^^^^ not found in this scope

Some errors have detailed explanations: E0405, E0432.
For more information about an error, try `rustc --explain E0405`.
error: could not compile `better-auth-toasty` (lib) due to 7 previous errors
warning: build failed, waiting for other jobs to finish...
    Building [=======================> ] 292/293: toasty
rust-compilation exited abnormally with code 101 at Sun Jun 21 11:48:36, duration 30.4 s
